--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link href="normalize.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="grid.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -18,71 +20,61 @@
     </header>
 
     <main>
-        <header>
+        <header class="header">
             <h1 class="head-brown head__brown--js">NOTATNIK WTF</h1>
         </header>
+        <div class="grid-one">
+            <div class="head-grid--index">
+                <nav class="box_second--box">
+                    <div class="box_second"> <a href="Git.html">Git</a></div>
+                    <div class="box_second"> <a class="" href="Github.html">Github</a></div>
+                    <div class="box_second"> <a class="" href="box.html">Zycie w pudełku</a></div>
+                    <div class="box_second"> <a class="" href="jednostki.html">Jednostki</a></div>
+                    <div class="box_second"> <a class="" href="position.html">Position</a></div>
+                    <div class="box_second"> <a class="" href="float.html">Float</a></div>
+                    <div class="box_second"> <a class="" href="Lista.html">Lista</a></div>
+                    <div class="box_second"> <a class="" href="grid.html">Grid</a></div>
+                    <div class="box_second"> <a class="" href="Szkielet-strony.html">Szkielet strony</a></div>
+                    <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+                    <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+                    <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+                    <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+                    <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+                    <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+                    <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+                    <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+                    <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+                    <div class="box_second"> <a class="" href="linki.html">Linki</a></div>
+                </nav>
+            </div>
+            <div class="news-grid">
+                <section>
+                    <h1>
+                        Zbiór wiadomosci ze szkolenia WTF
+                        </h2>
+                        <p id="notatki">
+                            Notatnik:)
+                        </p>
+                        <article>
+                            <h3 class="yellow-h">Znajdują sie tu treśći które chce poznać</h3>
+                            <p>
+                                <b>Do czego słiuży NAV.</b>
+                                <a href="#notatki">Notatki</a> to początek mojej strony.<br /> LAYOUT</p>
+                            <p>wartość:INHERIT-sprawia ze dziedziczymy wrtośći poziom wyżęj np.color:inferi(kolor bedzie taki jaki ma rodzic) UNDEFINET----NIEDEFINIOWANA
+                </section>
+            </div>
 
-        <img class="box_img" src="image.jpg" alt="logo" />
-
-        <div class="box">
-            <nav>
-                <div class="box_second"> <a href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Github.html">Github</a></div>
-                <div class="box_second"> <a class="" href="box.html">Zycie w pudełku</a></div>
-                <div class="box_second"> <a class="" href="jednostki.html">Jednostki</a></div>
-                <div class="box_second"> <a class="" href="position.html">Position</a></div>
-                <div class="box_second">
-                    <a class="" href="linki.html"></a>
-                </div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                <div class="box_second"> <a class="" href="linki.html">Linki</a></div>
-            </nav>
-        </div>
-        <div class="box">
-            <section>
-                <h2>
-                    Zbiór wiadomosci ze szkolenia WTF
-                </h2>
-                <p id="notatki">
-                    Notatnik:)
-                </p>
-                <article>
-                    <h3 class="yellow-h">Znajdują sie tu treśći które chce poznać</h3>
-                    <p>
-                        <b>Do czego słiuży NAV.</b>
-                        <a href="#notatki">Notatki</a> to początek mojej strony.<br /> LAYOUT</p>
-                </article>
-            </section>
-        </div>
+            <div class="word content-grid">
+                <section>
+                    <h1><b>Słówka</b</h1>
+                </section>
+                
     </main>
-    <footer class="footer">
+    <footer class="footer footer-grid">
         <p>Stopka strony</p>
     </footer>
+    </div>
+
     <script src="main.js"></script>
 </body>
 
