--- a/jednostki.html
+++ b/jednostki.html
@@ -24,8 +24,10 @@
                     <p class="git_border"><b>px,%,vw</b></p>
                     <div class="unit">1000x500 px
                         <div class="unit__percent">fifty-%</div>
-                        <div class="unit__body">VW ----SCROOL PLEASE</div>
+                        <div class="unit__body">VW-szerokość ----SCROOL PLEASE</div>
+                        <div class="unit__body-height">Vh-wysokość ----SCROOL PLEASE</div>
                     </div>
+
                 </article>
                 <section>
 
