--- a/linki.html
+++ b/linki.html
@@ -19,7 +19,8 @@
 
         <header>
             <nav class="navigation">
-                <a class="navigation__link" href="https://caniuse.com/">Strona pozwala sprawdzać czy dame elementy działąją na wszyszukiwarkach</a>
+                <a class="navigation__link" href="https://caniuse.com/">Strona pozwala sprawdzać czy dame elementy
+                    działąją na wszyszukiwarkach</a>
                 <a class="navigation__link" href="html.html">Html</a>
                 <a class="navigation__link navigation__link--maker" href="znaczniki.html">Znaczniki</a>
             </nav>
