--- a/Szkielet-strony.html
+++ b/Szkielet-strony.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
             <h2>Kolejny nagłówek</h2>
             <article>
                 Treść artukułu
-                <img src="szkielet.jpg" alt="szkielet">
+                <img src="/szkielet.jpg" alt="szkielet">
             </article>
         </section>
         <footer>Stopka</footer>
