--- a/grid.html
+++ b/grid.html
@@ -22,7 +22,7 @@
         <header>
             <h1 class="git_border"><b>GRID</br>
         </header>
-        <img src="grid.jpg" alt="grid">
+        <img src="/grid.jpg" alt="grid">
         <div class="grid">
             <div class="grid__item">1</div>
             <div class="grid__item">2</div>
@@ -42,7 +42,7 @@
         </div>
         <header>
             <h1 class="git_border"><b>GRID</br>
-             <img src="grid-one.jpg" alt="grid">
+             <img src="/grid-one.jpg" alt="grid">
         </header>
 
         <div class="grid-one">
