--- a/html.html
+++ b/html.html
@@ -1,72 +1,74 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <header>
-      <nav>
-        <a class="navigation" href="index.html">Strona Główna</a>
-        <a class="navigation" href="css.html">CSS</a>
-        <a class="navigation" href="znaczniki.html">znaczniki</a>
-      </nav>
+        <nav>
+            <a class="navigation" href="index.html">Strona Główna</a>
+            <a class="navigation" href="css.html">CSS</a>
+            <a class="navigation" href="znaczniki.html">znaczniki</a>
+        </nav>
     </header>
 
     <main>
-      <div class="box">
-        asdjasd
-      </div>
-      <div class="box">
-        asdjasd
-      </div>
-      <div class="box">
-        asdjasd
-        <img class="box_img" src="image.jpg" alt="logo" />
-      </div>
-      <div class="box">
-        asdjasd
-        <img class="box_img" src="image.jpg" alt="logo" />
-      </div>
-      <div class="box">
-        asdjasd
-      </div>
-      <div class="box">
-        asdjasd
-      </div>
-      <div class="box">
-        asdjasd
-      </div>
-      <div class="box">
-        asdjasd
-      </div>
-      <div class="box">
-        asdjasd
-      </div>
-      <div class="box">
-        asdjasd
-      </div>
-      <div class="box">
-        asdjasd
-      </div>
-      <div class="box">
-        asdjasd
-      </div>
-      <div class="box">
-        asdjasd
-      </div>
-      <div class="box">
-        asdjasd
-      </div>
-      <div class="box">
-        asdjasd
-      </div>
+        <div class="box">
+            asdjasd
+        </div>
+        <div class="box">
+            asdjasd
+        </div>
+        <div class="box">
+            asdjasd
+            <img class="/box_img" src="image.jpg" alt="logo" />
+        </div>
+        <div class="box">
+            asdjasd
+            <img class="box_img" src="image.jpg" alt="logo" />
+        </div>
+        <div class="box">
+            asdjasd
+        </div>
+        <div class="box">
+            asdjasd
+        </div>
+        <div class="box">
+            asdjasd
+        </div>
+        <div class="box">
+            asdjasd
+        </div>
+        <div class="box">
+            asdjasd
+        </div>
+        <div class="box">
+            asdjasd
+        </div>
+        <div class="box">
+            asdjasd
+        </div>
+        <div class="box">
+            asdjasd
+        </div>
+        <div class="box">
+            asdjasd
+        </div>
+        <div class="box">
+            asdjasd
+        </div>
+        <div class="box">
+            asdjasd
+        </div>
     </main>
     <footer>
-      To jest stopka strony:)
+        To jest stopka strony:)
     </footer>
-  </body>
+</body>
+
 </html>
