--- a/index.html
+++ b/index.html
@@ -7,73 +7,83 @@
     <title>Document</title>
     <link href="normalize.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="grid.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-    <header>
-        <nav class="navigation">
+    <header class="header_one">
+        <nav class="navigation navigation--js">
             <a class="navigation__link" href="css.html">Css</a>
             <a class="navigation__link" href="html.html">Html</a>
             <a class="navigation__link navigation__link--maker" href="znaczniki.html">Znaczniki</a>
         </nav>
+        <button class="hamburger hamburger--js" aria-label="Otwórz menu">MENU</button>
     </header>
 
     <main>
-        <header class="header">
-            <h1 class="head-brown head__brown--js">NOTATNIK WTF</h1>
+        <header class="header_two">
+            <h3 class="head-brown head__brown--js">NOTATNIK WTF</h3>
         </header>
         <div class="grid-one">
             <div class="head-grid--index">
                 <nav class="box_second--box">
                     <div class="box_second"> <a href="Git.html">Git</a></div>
-                    <div class="box_second"> <a class="" href="Github.html">Github</a></div>
-                    <div class="box_second"> <a class="" href="box.html">Zycie w pudełku</a></div>
-                    <div class="box_second"> <a class="" href="jednostki.html">Jednostki</a></div>
-                    <div class="box_second"> <a class="" href="position.html">Position</a></div>
-                    <div class="box_second"> <a class="" href="float.html">Float</a></div>
-                    <div class="box_second"> <a class="" href="Lista.html">Lista</a></div>
-                    <div class="box_second"> <a class="" href="grid.html">Grid</a></div>
-                    <div class="box_second"> <a class="" href="Szkielet-strony.html">Szkielet strony</a></div>
+                    <div class="box_second"> <a href="Github.html">Github</a></div>
+                    <div class="box_second"> <a href="box.html">Zycie w pudełku</a></div>
+                    <div class="box_second"> <a href="jednostki.html">Jednostki</a></div>
+                    <div class="box_second"> <a href="position.html">Position</a></div>
+                    <div class="box_second"> <a href="float.html">Float</a></div>
+                    <div class="box_second"> <a href="Lista.html">Lista</a></div>
+                    <div class="box_second"> <a href="grid.html">Grid</a></div>
+                    <div class="box_second"> <a href="Szkielet-strony.html">Szkielet strony</a></div>
+                    <div class="box_second"> <a href="formularz.html">Git</a></div>
+                    <div class="box_second"> <a href="Przycisk.html">Przycisk</a></div>
+                    <div class="box_second"> <a href="Git.html">Git</a></div>
                     <div class="box_second"> <a class="" href="Git.html">Git</a></div>
                     <div class="box_second"> <a class="" href="Git.html">Git</a></div>
                     <div class="box_second"> <a class="" href="Git.html">Git</a></div>
                     <div class="box_second"> <a class="" href="Git.html">Git</a></div>
                     <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                    <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                    <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                    <div class="box_second"> <a class="" href="Git.html">Git</a></div>
-                    <div class="box_second"> <a class="" href="Git.html">Git</a></div>
+                    <div class="jstyle"> <a class="jstyle_link" href="typydanych.html">Zmienne</a></div>
+                    <div class="jstyle"> <a class="jstyle_link" href="JS.html">Zmienne</a></div>
                     <div class="box_second"> <a class="" href="linki.html">Linki</a></div>
                 </nav>
             </div>
             <div class="news-grid">
                 <section>
-                    <h1>
-                        Zbiór wiadomosci ze szkolenia WTF
-                        </h2>
+                    <h3 class="change"> Zbiór wiadomosci ze szkolenia WTF
+                    </h3>
+
+                    <article>
+
+                        <button class="button--js">Zmiana.Przycisk</button>
                         <p id="notatki">
                             Notatnik:)
                         </p>
-                        <article>
-                            <h3 class="yellow-h">Znajdują sie tu treśći które chce poznać</h3>
-                            <p>
-                                <b>Do czego słiuży NAV.</b>
-                                <a href="#notatki">Notatki</a> to początek mojej strony.<br /> LAYOUT</p>
-                            <p>wartość:INHERIT-sprawia ze dziedziczymy wrtośći poziom wyżęj np.color:inferi(kolor bedzie taki jaki ma rodzic) UNDEFINET----NIEDEFINIOWANA
+                    </article>
+                </section>
+                <section>
+                    <h4 class="yellow-h">Znajdują sie tu treśći które chce poznać</h4>
+                    <article>
+
+
+                        <p>
+                            <b>Do czego słiuży NAV.</b>
+                            <a href="#notatki">Notatki</a> to początek mojej strony.<br /> LAYOUT</p>
+                        <p>wartość:INHERIT-sprawia ze dziedziczymy wrtośći poziom wyżęj np.color:inferi(kolor bedzie taki jaki ma rodzic) UNDEFINET----NIEDEFINIOWANA</p>
+                    </article>
+
                 </section>
             </div>
+            <div class="conten words">Simanko</div>
+            <footer class="footer footer-grid">
+                <p>Stopka strony</p>
+            </footer>
+        </div>
 
-            <div class="word content-grid">
-                <section>
-                    <h1><b>Słówka</b</h1>
-                </section>
-                
+
     </main>
-    <footer class="footer footer-grid">
-        <p>Stopka strony</p>
-    </footer>
-    </div>
+
+
 
     <script src="main.js"></script>
 </body>
