--- a/sunrise-bar.html
+++ b/sunrise-bar.html
@@ -6,20 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="normalize.css" rel="stylesheet" type="text/css" />
     <link href="sunrise.css" rel="stylesheet" type="text/css" />
-    <title>Document</title>
+    <link href="facebook-f-brands.svg" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Display:wght@500&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <header class="head">
-        <nav class="">
-            <a class="" href="">Css</a>
-        </nav>
-    </header>
     <manu class="loyaut">
-        <div class="head">1111111111111</div>
-        <div class="conten">1111111111111</div>
-        <div class="news">333333333333333333</div>
-        <footer class="footer">444444444444444 </footer>
+        <div class="head">
+            <div class="head_contact">
+                <div class="head_contact--tel"><img src="telephone.png" /> Kamil 797 328 203 Sylwek 513 987 789</div>
+                <div class="head_contact--web">
+                    <a href="https://www.facebook.com">
+                        <img src="facebook.png" />
+                    </a>
+                </div>
+            </div>
+            <section class=>
+                <h1 class="sunrise">SunriseBar</h1>
+            </section>
+        </div>
+
+
+        <section class="conten">
+
+            <article>
+                <h1 class="conten-head">Witaj</h1>
+                <p clsss="conte">Kim jestesmy?Hmmmm...tego Wam nie możemy powiedzieć lecz możemy rzec czym sie zajmujemy.Kazdy z Nas ma w życiu włąsne pasje lecz jedną wśpólona jest rozmowa i alhochol...:)Oferujemy państwu DRINKBAR na Wasze uroczystości...gwarantujemy
+                    ze goście na Waszym weselu nie wiele zapamiętaja.Naszym zapleczem jest juz wiele udamych Wesel 0 rozwodów oraz wiele ale to naprawde wiele przeprowadzonych rozmów.</p>
+            </article>
+        </section>
+
+        <div class="news img"></div>
+        <footer class="footer"> </footer>
     </manu>
 
 </body>
