--- a/Github.html
+++ b/Github.html
@@ -1,59 +1,58 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <nav class="navigation">
-        <a class="navigation__link" href="index.html">Strona Główna</a>
-      </nav>
+        <nav class="navigation">
+            <a class="navigation__link" href="index.html">Strona Główna</a>
+        </nav>
     </header>
 
     <head>
-      <section>
-        <h1>Github!-Polecenia</h1>
-        <article>
-          <p>
-            Git pozwala nam na zapisywanie i cofanie zmina wprowadzonych w
-            kodziee
-          </p>
-          <p class="git_border">
-            KOMENDY POTRZEBNE DO REJESTRACJI
-          </p>
-          <ul>
-            <div class="box_gitk">
-              <li>git push</li>
-            </div>
-            <li>GIT pozwala na sprawne zarządzanie zmianami w projekcie</li>
-            <li>GIT pozwala na sprawne zarządzanie zmianami w projekcie -</li>
-            <li>Działa lokalnie -</li>
-            <li>Do działania zdalnego potrzebuje serwera (np. GitHub) -</li>
-            <li>podstaw GIT-a jest wymagana niezależnie od technologii -</li>
+        <section>
+            <h1>Github!-Polecenia</h1>
+            <article>
+                <p>
+                    Git pozwala nam na zapisywanie i cofanie zmina wprowadzonych w kodziee
+                </p>
+                <p class="git_border">
+                    KOMENDY POTRZEBNE DO REJESTRACJI
+                </p>
+                <ul>
+                    <div class="box_gitk">
+                        <li>git push</li>
+                    </div>
+                    <li>GIT pozwala na sprawne zarządzanie zmianami w projekcie</li>
+                    <li>GIT pozwala na sprawne zarządzanie zmianami w projekcie -</li>
+                    <li>Działa lokalnie -</li>
+                    <li>Do działania zdalnego potrzebuje serwera (np. GitHub) -</li>
+                    <li>podstaw GIT-a jest wymagana niezależnie od technologii -</li>
 
-            <li>
-              Konto na GitHubie jest Twoją programistyczną wizytówką, zadbaj aby
-              była ładna i prawdziwa :) -
-            </li>
+                    <li>
+                        Konto na GitHubie jest Twoją programistyczną wizytówką, zadbaj aby była ładna i prawdziwa :) -
+                    </li>
 
-            <li>
-              jak dokładamy jakąś widoczną zmianę do projektu (lepiej częściej,
-              niż za mało) -
-            </li>
-            <li>
-              Podstawowy flow: git add . / git commit -m "opis zmiany" / git
-              push
-            </li>
-          </ul>
+                    <li>
+                        jak dokładamy jakąś widoczną zmianę do projektu (lepiej częściej, niż za mało) -
+                    </li>
+                    <li>
+                        Podstawowy flow: git add . / git commit -m "opis zmiany" / git push
+                    </li>
+                </ul>
 
-          .
-        </article>
-      </section>
+                .
+            </article>
+        </section>
     </head>
     <main></main>
-  </body>
-  <footer></footer>
+</body>
+<footer></footer>
+
 </html>
