--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
 
 <body>
     <header class="header_one">
+        <button class="hamburger hamburger--js" aria-label="Otwórz menu">MENU</button>
         <nav class="navigation navigation--js">
             <a class="navigation__link" href="css.html">Css</a>
             <a class="navigation__link" href="html.html">Html</a>
             <a class="navigation__link navigation__link--maker" href="znaczniki.html">Znaczniki</a>
         </nav>
-        <button class="hamburger hamburger--js" aria-label="Otwórz menu">MENU</button>
     </header>
+
 
     <main>
         <header class="header_two">
             <h3 class="head-brown head__brown--js">NOTATNIK WTF</h3>
         </header>
-        <div class="grid-one">
-            <div class="head-grid--index">
+        <div class="grid_one">
+            <div class="flex head-grid">
                 <nav class="box_second--box">
-                    <div class="box_second"> <a href="Git.html">Git</a></div>
+                    <div class="box_second"> <a href="Git.html">Gittttt</a></div>
                     <div class="box_second"> <a href="Github.html">Github</a></div>
                     <div class="box_second"> <a href="box.html">Zycie w pudełku</a></div>
                     <div class="box_second"> <a href="jednostki.html">Jednostki</a></div>
@@ -48,43 +49,31 @@
                     <div class="box_second"> <a class="" href="linki.html">Linki</a></div>
                 </nav>
             </div>
+
             <div class="news-grid">
                 <section>
-                    <h3 class="change"> Zbiór wiadomosci ze szkolenia WTF
-                    </h3>
-
+                    <h3 class="change"> Zbiór wiadomosci ze szkolenia WTF</h3>
                     <article>
-
                         <button class="button--js">Zmiana.Przycisk</button>
-                        <p id="notatki">
-                            Notatnik:)
-                        </p>
+                        <p id="notatki"> Notatnik:)</p>
                     </article>
                 </section>
                 <section>
                     <h4 class="yellow-h">Znajdują sie tu treśći które chce poznać</h4>
                     <article>
-
-
-                        <p>
-                            <b>Do czego słiuży NAV.</b>
+                        <p> <b>Do czego słiuży NAV.</b>
                             <a href="#notatki">Notatki</a> to początek mojej strony.<br /> LAYOUT</p>
                         <p>wartość:INHERIT-sprawia ze dziedziczymy wrtośći poziom wyżęj np.color:inferi(kolor bedzie taki jaki ma rodzic) UNDEFINET----NIEDEFINIOWANA</p>
                     </article>
-
                 </section>
             </div>
             <div class="conten words">Simanko</div>
             <footer class="footer footer-grid">
                 <p>Stopka strony</p>
             </footer>
+
         </div>
-
-
     </main>
-
-
-
     <script src="main.js"></script>
 </body>
 
